--- a/Ray.Notification.Wpf/Views/Login.xaml
+++ b/Ray.Notification.Wpf/Views/Login.xaml
@@ -6,7 +6,7 @@
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:local="clr-namespace:Ray.Notification.Wpf.Views"
         mc:Ignorable="d"
-        Title="Login" 
+        Title="صفحه ورود" 
         ResizeMode="NoResize"
         WindowStyle="None"
         Height="450" 
