--- a/Ray.Notification.Wpf/Views/SettingsView.xaml
+++ b/Ray.Notification.Wpf/Views/SettingsView.xaml
@@ -8,7 +8,7 @@
         xmlns:sys="clr-namespace:System;assembly=mscorlib"
         mc:Ignorable="d"
         DataContext="{Binding Settings, Source={StaticResource Locator} }"
-        Title="SettingsView"
+        Title="تنظیمات"
         Height="550" 
         Width="800"
         FontFamily="Fonts/#Shabnam"
