--- a/Ray.Notification.Wpf/Views/MainView.xaml
+++ b/Ray.Notification.Wpf/Views/MainView.xaml
@@ -147,7 +147,7 @@
             </tb:TaskbarIcon.TrayToolTip>
             <tb:TaskbarIcon.ContextMenu>
                 <ContextMenu Background="#28A1A2" >
-                    <MenuItem Header="ورود" 
+                    <!--<MenuItem Header="ورود" 
                               Foreground="White"
                               VerticalAlignment="Stretch"
                               HorizontalAlignment="Stretch"
@@ -157,7 +157,7 @@
                                                      VerticalAlignment="Center"
                                                      HorizontalAlignment="Left"/>
                         </MenuItem.Icon>
-                    </MenuItem>
+                    </MenuItem>-->
                     <MenuItem Header="تنظیمات" 
                               Foreground="White"
                               VerticalAlignment="Stretch"
