--- a/Ray.Notification.Wpf/Views/SettingsView.xaml
+++ b/Ray.Notification.Wpf/Views/SettingsView.xaml
@@ -9,73 +9,79 @@
         mc:Ignorable="d"
         DataContext="{Binding Settings, Source={StaticResource Locator} }"
         Title="تنظیمات"
-        Height="550" 
+        Height="550"
         Width="800"
         FontFamily="Fonts/#Shabnam"
-        AllowsTransparency="True"  
-        WindowStyle="None" 
+        AllowsTransparency="True"
+        WindowStyle="None"
         ResizeMode="NoResize"
         Background="Transparent"
         WindowStartupLocation="CenterScreen">
     <Window.Resources>
         <Storyboard x:Key="SettingsAnimation">
-            <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[2].(RotateTransform.Angle)" 
+            <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[2].(RotateTransform.Angle)"
                                            Storyboard.TargetName="image">
-                <EasingDoubleKeyFrame KeyTime="0" Value="0"/>
-                <EasingDoubleKeyFrame KeyTime="0:0:2.5" Value="1500">
+                <EasingDoubleKeyFrame KeyTime="0"
+                                      Value="0" />
+                <EasingDoubleKeyFrame KeyTime="0:0:2.5"
+                                      Value="1500">
                     <EasingDoubleKeyFrame.EasingFunction>
-                        <CircleEase EasingMode="EaseOut"/>
+                        <CircleEase EasingMode="EaseOut" />
                     </EasingDoubleKeyFrame.EasingFunction>
                 </EasingDoubleKeyFrame>
             </DoubleAnimationUsingKeyFrames>
         </Storyboard>
         <Storyboard x:Key="LoadAnimation">
-            <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Opacity)" 
+            <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Opacity)"
                                            Storyboard.TargetName="Window">
-                <EasingDoubleKeyFrame KeyTime="0" Value="0"/>
-                <EasingDoubleKeyFrame KeyTime="0:0:0.4" Value="1"/>
+                <EasingDoubleKeyFrame KeyTime="0"
+                                      Value="0" />
+                <EasingDoubleKeyFrame KeyTime="0:0:0.4"
+                                      Value="1" />
             </DoubleAnimationUsingKeyFrames>
         </Storyboard>
         <Storyboard x:Key="UnLoadAnimation">
-            <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Opacity)" 
+            <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Opacity)"
                                            Storyboard.TargetName="Window">
-                <SplineDoubleKeyFrame KeyTime="0" Value="1"/>
-                <SplineDoubleKeyFrame KeyTime="0:0:0.4" Value="0"/>
+                <SplineDoubleKeyFrame KeyTime="0"
+                                      Value="1" />
+                <SplineDoubleKeyFrame KeyTime="0:0:0.4"
+                                      Value="0" />
             </DoubleAnimationUsingKeyFrames>
         </Storyboard>
     </Window.Resources>
     <Window.Triggers>
         <EventTrigger RoutedEvent="FrameworkElement.Loaded">
-            <BeginStoryboard Storyboard="{StaticResource SettingsAnimation}"/>
-            <BeginStoryboard Storyboard="{StaticResource LoadAnimation}"/>
+            <BeginStoryboard Storyboard="{StaticResource SettingsAnimation}" />
+            <BeginStoryboard Storyboard="{StaticResource LoadAnimation}" />
         </EventTrigger>
     </Window.Triggers>
     <Grid Margin="2,2,10,10">
         <Grid.BitmapEffect>
-            <DropShadowBitmapEffect/>
+            <DropShadowBitmapEffect />
         </Grid.BitmapEffect>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-
-        <Border Grid.Row="1" 
-                BorderThickness="8,0,8,8" 
-                BorderBrush="#28A1A2" 
+        <Border Grid.Row="1"
+                BorderThickness="8,0,8,8"
+                BorderBrush="#28A1A2"
                 Background="White">
             <Grid>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="*"/>
-                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="3*"/>
-                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="3*" />
+                    <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
                 <StackPanel Grid.Row="0"
                             Grid.Column="0"
                             Orientation="Vertical">
-                    <StackPanel Margin="25,35,0,0">
+                    <!--<StackPanel Margin="25,35,0,0">
                         <TextBlock  Foreground="#013244" 
                                     Text="سرویس" 
                                     HorizontalAlignment="Right" 
@@ -93,32 +99,34 @@
                                    Foreground="#013244" />
                         <TextBox Text="{Binding ServiceAddress, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                  Margin="0 10 0 0 "/>
-                    </StackPanel>
+                    </StackPanel>-->
                     <StackPanel Margin="25,55,0,0">
                         <TextBlock  Foreground="#013244"
-                                    Text="اعلان" 
-                                    HorizontalAlignment="Right" 
-                                    FontSize="18"  
-                                    VerticalAlignment="Center" 
-                                    Margin=" 0 0 0 10"/>
-                        <Separator BorderThickness="5"/>
-                        <Border BorderThickness="1" 
-                                BorderBrush="#013244"  
-                                Height="1" 
-                                Background="#013244"/>
+                                    Text="اعلان"
+                                    HorizontalAlignment="Right"
+                                    FontSize="18"
+                                    VerticalAlignment="Center"
+                                    Margin=" 0 0 0 10" />
+                        <Separator BorderThickness="5" />
+                        <Border BorderThickness="1"
+                                BorderBrush="#013244"
+                                Height="1"
+                                Background="#013244" />
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition />
                                 <ColumnDefinition />
                             </Grid.ColumnDefinitions>
-                            <TextBlock Grid.Column="1" Text="مدت زمان نمایش اعلان بر حسب ثانیه" 
+                            <TextBlock Grid.Column="1"
+                                       Text="مدت زمان نمایش اعلان بر حسب ثانیه"
                                        Margin="0,15,0,4"
                                        Foreground="#013244"
                                        VerticalAlignment="Center"
-                                       HorizontalAlignment="Right"/>
-                            <ComboBox Grid.Column="0" Style="{DynamicResource SimpleComboBox}"
+                                       HorizontalAlignment="Right" />
+                            <ComboBox Grid.Column="0"
+                                      Style="{DynamicResource SimpleComboBox}"
                                       Width="100"
-                                      HorizontalAlignment="Center" 
+                                      HorizontalAlignment="Center"
                                       VerticalAlignment="Center"
                                       Margin="0 10 0 0"
                                       SelectedItem="{Binding SecondsVisibilityBalloonTime, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
@@ -134,42 +142,39 @@
                                 <sys:Int32>10</sys:Int32>
                             </ComboBox>
                         </Grid>
-
                         <StackPanel Orientation="Horizontal"
                                     Margin="0 25 0 25">
                             <Grid>
                                 <Grid.ColumnDefinitions>
-                                    <ColumnDefinition/>
-                                    <ColumnDefinition/>
+                                    <ColumnDefinition />
+                                    <ColumnDefinition />
                                 </Grid.ColumnDefinitions>
-
                                 <TextBlock Grid.Column="0"
                                            VerticalAlignment="Center"
-                                            HorizontalAlignment="Left"
-                                            Text="آیا هنگامی که پنل اعلان ها باز است اعلانی نمایش داده شود؟" 
-                                            Margin="228,0,0,0" 
-                                            Foreground="#013244"
-                                            Width="312" />
+                                           HorizontalAlignment="Left"
+                                           Text="آیا هنگامی که پنل اعلان ها باز است اعلانی نمایش داده شود؟"
+                                           Margin="228,0,0,0"
+                                           Foreground="#013244"
+                                           Width="312" />
                                 <CheckBox Grid.Column="1"
                                           VerticalAlignment="Center"
                                           HorizontalAlignment="Right"
-                                          Style="{DynamicResource SimpleCheckBox}" 
-                                          IsChecked="{Binding ShowBalloonWithNotificationsOpen, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                                          Style="{DynamicResource SimpleCheckBox}"
+                                          IsChecked="{Binding ShowBalloonWithNotificationsOpen, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                             </Grid>
                         </StackPanel>
                     </StackPanel>
                 </StackPanel>
-
-                <StackPanel Grid.Column="0" 
-                            Grid.Row="1" 
+                <StackPanel Grid.Column="0"
+                            Grid.Row="1"
                             Orientation="Horizontal"
                             HorizontalAlignment="Left"
-                            Margin="45,0,0,10">
-                    <Button ToolTip="بستن" 
+                            Margin="45,0,0,75">
+                    <Button ToolTip="بستن"
                             BorderBrush="Transparent"
                             Style="{StaticResource MaterialDesignFloatingActionAccentButton}"
-                            Width="45" 
-                            Height="45" 
+                            Width="45"
+                            Height="45"
                             Click="CloseButton_Click">
                         <materialDesign:PackIcon Kind="CloseCircle"
                                                  Width="45"
@@ -178,14 +183,14 @@
                                                  BorderBrush="#013244"
                                                  Foreground="#013244"
                                                  HorizontalAlignment="Center"
-                                                 VerticalAlignment="Center"/>
+                                                 VerticalAlignment="Center" />
                     </Button>
                     <Button ToolTip="ذخیره"
                             BorderBrush="Transparent"
                             Style="{StaticResource MaterialDesignFloatingActionAccentButton}"
-                            Width="45" 
+                            Width="45"
                             Height="45"
-                            Margin="25,0,0,0" 
+                            Margin="25,0,0,0"
                             Command="{Binding SaveSettingsCommand}">
                         <materialDesign:PackIcon Kind="ContentSaveSettings"
                                                  Width="45"
@@ -194,54 +199,73 @@
                                                  BorderBrush="#013244"
                                                  Foreground="#013244"
                                                  HorizontalAlignment="Center"
-                                                 VerticalAlignment="Center"/>
+                                                 VerticalAlignment="Center" />
                     </Button>
                 </StackPanel>
+                <Grid Grid.Column="0"
+                      Grid.Row="2">
+                    <Grid.Background>
+                        <LinearGradientBrush StartPoint="0.1 0"
+                                             EndPoint="0.9 1">
+                            <GradientStop Color="#28A1A2"
+                                          Offset="1" />
+                            <GradientStop Color="#013244"
+                                          Offset="0" />
+                        </LinearGradientBrush>
+                    </Grid.Background>
+                </Grid>
             </Grid>
         </Border>
         <Grid Grid.Row="0">
-            <Border  BorderThickness="8,8,8,0" 
-                     BorderBrush="#28A1A2" 
+            <Border  BorderThickness="8,8,8,0"
+                     BorderBrush="#28A1A2"
                      Background="White">
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition />
                         <ColumnDefinition />
                     </Grid.ColumnDefinitions>
-                    <TextBlock  Foreground="#013244" 
-                                Text="تنظیمات" 
+                    <TextBlock  Foreground="#013244"
+                                Text="تنظیمات"
                                 HorizontalAlignment="Left"
-                                Margin="30,0,0,0" 
-                                FontSize="42"  
-                                VerticalAlignment="Center" Grid.Column="1"/>
+                                Margin="30,0,0,0"
+                                FontSize="42"
+                                VerticalAlignment="Center"
+                                Grid.Column="1" />
                 </Grid>
             </Border>
-
-            <Border  BorderThickness="7,7,7,0" 
-                     BorderBrush="#28A1A2" 
+            <Border  BorderThickness="7,7,7,0"
+                     BorderBrush="#28A1A2"
                      VerticalAlignment="Bottom"
-                     Margin="8,0,8,0"/>
-            <Border CornerRadius="100" Background="White"
-                    BorderThickness="3" Height="160" Width="160" 
-                    HorizontalAlignment="Right" VerticalAlignment="Bottom" 
+                     Margin="8,0,8,0" />
+            <Border CornerRadius="100"
+                    Background="White"
+                    BorderThickness="3"
+                    Height="160"
+                    Width="160"
+                    HorizontalAlignment="Right"
+                    VerticalAlignment="Bottom"
                     Margin="0,0,20,-50">
                 <Border.BorderBrush>
-                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                        <GradientStop Color="#013244" Offset="0"/>
-                        <GradientStop Color="White" Offset="1"/>
+                    <LinearGradientBrush EndPoint="0.5,1"
+                                         StartPoint="0.5,0">
+                        <GradientStop Color="#013244"
+                                      Offset="0" />
+                        <GradientStop Color="White"
+                                      Offset="1" />
                     </LinearGradientBrush>
                 </Border.BorderBrush>
-                <Image x:Name="image" 
+                <Image x:Name="image"
                        HorizontalAlignment="Center"
-                       VerticalAlignment="Center" 
-                       Source="/Ray.Notification.Wpf;component/Images/settingsImage.png" 
+                       VerticalAlignment="Center"
+                       Source="/Ray.Notification.Wpf;component/Images/settingsImage.png"
                        RenderTransformOrigin="0.5,0.5">
                     <Image.RenderTransform>
                         <TransformGroup>
-                            <ScaleTransform/>
-                            <SkewTransform/>
-                            <RotateTransform/>
-                            <TranslateTransform/>
+                            <ScaleTransform />
+                            <SkewTransform />
+                            <RotateTransform />
+                            <TranslateTransform />
                         </TransformGroup>
                     </Image.RenderTransform>
                 </Image>
